[package]
name = "odysseus"
version = "0.1.0"
edition = "2021"
categories = ["graphics", "gui", "rendering"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[[example]]
name = "window"
path = "examples/window.rs"
doc-scrape-examples = true